- added functions to compute the generalized central t-distribution 
  defined in Section 5.3 of Xiao (2018).
- added function xiao.t.test to compute the Xiao t-test derived from the 
  solution to a generalized Behrens-Fisher problem
- added Xiao method to normDiffCI
- added xiao.t.test to pairwise.ext.t.test
- changed selection of random permutations leading to a 3 to 4 fold speed-up


###########################################################
## Version 1.3
###########################################################
- added function mdplot to plot mean difference of two groups assuming normal 
  distributions
- added function md2sens to compute sensitivity and specificity based on 
  the optimal cutoff (Youden's J statistic) assuming two normal distributions
- added function md2zfactor to compute the z-factor assuming two normal 
  distributions
- boot.t.test now can return the bootstrap results of the test statistic
- perm.t.test now can return the permutation results of the test statistic
- new diagnostic plot h0plot, to visualize the distribution of the test 
  statistic under H0 with methods for htest, boot.htest, and perm.htest


###########################################################
## Version 1.2
###########################################################
- changed print functions for perm.htest and boot.htest
- modified computation of p values for perm.t.test and boot.t.test for extreme
  cases
- removed DESCRIPTION table from package Rd file.
- added functions to compute (multivariate) intersection-union z- and t-test



###########################################################
## Version 1.1
###########################################################
- madCI was modified for method = "boot" and is no longer based on function
  quantileCI, but directly on function mad. It should now give better 
  confidence coverages.
- minor modification in mi.t.test: number of imputations is printed