@@ -150,14 +150,13 @@ t.test(1:10, y = c(7:20, 200)) # P = .1245    -- NOT significant anymore
 perm.t.test(1:10, y = c(7:20, 200)) # perm.conf.int affected by outlier!
 
 
-## Classical example: Student's sleep data
-plot(extra ~ group, data = sleep)
 ## Traditional interface
-with(sleep, t.test(extra[group == 1], extra[group == 2]))
-with(sleep, perm.t.test(extra[group == 1], extra[group == 2]))
+with(mtcars, t.test(mpg[am == 0], mpg[am == 1]))
+with(mtcars, perm.t.test(mpg[am == 0], mpg[am == 1]))
 ## Formula interface
-t.test(extra ~ group, data = sleep)
-perm.t.test(extra ~ group, data = sleep)
+t.test(mpg ~ am, data = mtcars)
+perm.t.test(mpg ~ am, data = mtcars)
+
 
 ## all permutations vs combinations
 perm.t.test(1:3, y = 2:5, useCombn = TRUE)
